# SmartScopeAI

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
SmartscopeAI/interfaces/celery/: app.py  settings.py  tasks.py
SmartscopeAI/microservice/: data.py  main.py  wrapper.py
SmartscopeAI/microservice/tests/: test_wrapper.py
