[project]
name = "ai-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "black==21.4b2",
    "celery>=5.4.0",
    "matplotlib>=3.7.5",
    "opencv-python>=4.10.0.84",
    "pydantic>=2.10.5",
    "redis>=5.2.1",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "torch==1.8.1",
    "torchvision==0.9.1",
    "numpy<2",
    "pillow==9.0.1",
    "pandas==2.0.2",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "mrcfile>=1.5.3",
    "ruff>=0.9.2",
    "pytest>=8.3.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/lts/1.8/cpu"

[tool.setuptools]
packages = ['SmartscopeAI']
